--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.10",
+        "laravel/nexmo-notification-channel": "^3.2",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "spatie/laravel-permission": "^5.10"
+        "laravel/vonage-notification-channel": "^3.2",
+        "spatie/laravel-permission": "^5.10",
+        "twilio/sdk": "^7.12",
+        "vonage/client": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
